delete old helm

--- a/HelmChart01/values.yaml
+++ b/HelmChart01/values.yaml
@@ -7,4 +7,4 @@ imageTag: latest
 
 rtsp_stream: http://pendelcam.kip.uni-heidelberg.de/mjpg/video.mjpg
 mqtt_broker: 8d2c486bc4f24addadc3f5e208b92d17.s1.eu.hivemq.cloud
-mqtt_topic: ai/detection
+mqtt_topic: raspberry/onnx/rtsp
